[LOGGING-192] Fix factory loading from TCCL
This fixes the loading of standard `LogFactory` implementations from the TCCL.

The current code has a fallback clause in `newFactory`, so it can happen that the code tests for the presence of Log4j API and SLF4J in the TCCL, but it actually loads the factory from the current classloader (which lacks either of those libraries).